Fix https://bz.apache.org/bugzilla/show_bug.cgi?id=63838
Add the same options used when Tomcat starts to suppress reflexive
access warnings when running unit tests from the command line.